examples/aws/Fargate/001-intro/vpc.tf
resource "aws_vpc" "flaskapp-vpc" {
    cidr_block = "10.72.0.0/16"
    tags = {
        Name = "flaskapp-vpc"
    }
}
